# az-tf-containers

./: .gitignore
apps/api/: Cargo.toml  Dockerfile
apps/api/src/: main.rs
tf/: README.md  main.tf  providers.tf  variables.tf
